<resources>
    <string name="app_name">Liveoo</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_note">We will never post to Facebook\nwithout your permission</string>
    <string name="login">L\u200ao\u200ag\u200ai\u200an</string>
    <string name="register">R\u200ae\u200ag\u200ai\u200as\u200at\u200ae\u200ar</string>
    <string name="reset_password">R\u200ae\u200as\u200ae\u200at\u2009 p\u200aa\u200as\u200as\u200aw\u200ao\u200ar\u200ad</string>
    <string name="restore_password_hint">Please enter your email address\nto reset your password</string>
    <string name="reset_password_hint">Please set a new password below</string>
    <string name="reset_success">Your password has been successfully reset\nand now you can log in</string>
    <string name="activity_main_title">Categories</string>
    <string name="background_image_description">Background image</string>
    <string name="title_activity_ticket_list">My Tickets</string>
    <string name="action_map">Open map</string>
    <string name="share">Share</string>
    <string name="book_now">Book Now</string>
    <string name="invite">Invite</string>
    <string name="title_activity_ticket_book">Event Booking</string>
    <string name="title_activity_ticket_pay">Payment Details</string>
    <string name="title_activity_ticket_result">Thank You</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_tickets">My Tickets</string>
    <string name="title_activity_ticket_detail">Ticket Detail</string>
    <string name="title_activity_tags_manage">Like it, Tap it</string>
    <string name="title_activity_info_update">You</string>
</resources>
