<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:background="@drawable/background_blurred"
              tools:context=".LoginActivity">

    <TextView
        style="@style/FormHeader"
        android:text="Forgotten Password"/>

    <TextView
        style="@style/TextLabel"
        android:text="@string/restore_password_hint"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/email_edittext"
        style="@style/InputField"
        android:drawableLeft="@drawable/ic_email"
        android:hint="Enter Email Address"
        android:inputType="textEmailAddress"/>

    <Button
        android:onClick="login"
        android:text="@string/register"
        style="@style/ButtonPrimary"/>

    <TextView
        style="@style/TextLabel"
        android:text="Or"
        android:textAllCaps="true"/>

    <!--TODO: Replace with real Facebook button-->
    <Button
        android:onClick="continueWithFacebook"
        android:text="Sign in with Facebook"
        style="@style/ButtonSecondary"
        android:textAllCaps="false"/>

    <TextView
        style="@style/TextLabel"
        android:text="@string/facebook_note"/>

</LinearLayout>
