<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".PasswordRestoreActivity">

    <ImageView
        style="@style/BackgroundImage"
        tools:ignore="contentDescription"/>

    <LinearLayout
        style="@style/LoginContainer">

        <TextView
            style="@style/FormHeader"
            android:text="Forgotten Password"/>

        <TextView
            style="@style/TextLabel"
            android:layout_marginBottom="16dp"
            android:text="@string/restore_password_hint"/>

        <EditText
            android:id="@+id/email_edittext"
            style="@style/InputField"
            android:drawableLeft="@drawable/ic_email"
            android:hint="Enter Email Address"
            android:inputType="textEmailAddress"/>

        <Button
            style="@style/ButtonPrimary"
            android:onClick="register"
            android:text="@string/register"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="4dp"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="12dp"
                android:background="@android:color/white"/>

            <TextView
                style="@style/TextLabel"
                android:textSize="17sp"
                android:text="Or"
                android:textAllCaps="true"/>

            <View
                android:layout_width="0dp"
                android:layout_marginLeft="12dp"
                android:layout_gravity="center_vertical"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@android:color/white"/>

        </LinearLayout>

        <LinearLayout
            style="@style/ButtonFacebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_marginRight="15dp"
                android:src="@drawable/ic_facebook"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sign in with Facebook"
                android:textColor="@android:color/white"
                android:textSize="20sp"/>

        </LinearLayout>

        <TextView
            style="@style/TextLabel"
            android:text="@string/facebook_note"/>

    </LinearLayout>

</FrameLayout>
